media/qbittorrent/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
    app.kubernetes.io/name: qbittorrent
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
  - name: http
    port: 80
    targetPort: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  strategy:
    type: Recreate
  selector:
      matchLabels:
        app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        app.kubernetes.io/name: qbittorrent
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: austin
      securityContext:
        fsGroup: 1000
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent
        volumeMounts:
        - name: qbittorrent-config
          mountPath: /config
        - name: data
          subPath: downloads
          mountPath: /downloads
        - name: data
          subPath: watch
          mountPath: /watch
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
        ports:
          - name: web
            containerPort: 8080 
      - name: vpn
        image: dperson/openvpn-client
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - '[ "$(curl -s https://ifconfig.co/city)" != "Austin" ]'
          initialDelaySeconds: 30
          periodSeconds: 60
        volumeMounts:
          - name: vpn-config
            mountPath: /vpn
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 500m
            memory: 64Mi
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
              claimName: qbittorrent
        - name: data
          persistentVolumeClaim:
              claimName: media-storage
        - name: vpn-config
          projected:
            sources:
            - secret:
                name: media-secret
                items:
                - key: VPN_AUTH
                  path: vpn.auth
                - key: VPN_CA
                  path: ca.crt
                - key: VPN_CLIENT_CERT
                  path: client.crt
                - key: VPN_CLIENT_KEY
                  path: client.key
            - configMap:
                name: vpn-config
